--- a/get_weather.yml
+++ b/get_weather.yml
@@ -6,4 +6,4 @@
     - weather:
         latitude: 35.7804
         longitude: -78.6391 
-        api_key: "7f7bbf445ea4401fe20e962cec3c1cd1"
+        api_key: "CHANGE_ME"
